# osimis-webviewer-plugin

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  AUTHORS  CMakeLists.txt  Dockerfile  DockerfileTestRunner  DockerfileTestRunner.deprec  Gruntfile.js  Jenkinsfile  NEWS  README-plugin.md  README.md  RELEASE_NOTES.txt  bower.json  buildDocker.sh  buildOsX.sh  config.js  demo-overlay.html  demo-toolbar.html  docker-build-webviewer-js.sh  docker-build-webviewer.sh  docker-compose.yml  gulp.config.js  gulpfile.js  index.html  installOsX.sh  karma.conf.js  mkdocs.yml  orthanc.json  osisync.json  package.json  plugin-entrypoint.html  server.js  startDocker.sh
BenchmarksSources/: benchmark-data 1 - cpu-clock.csv  benchmark-data 2 - x-clock.csv  benchmark-data 3 - cpu-clock.csv  benchmark-data 4 - cpu-clock.csv  benchmark-data 5 - cpu-clock.csv  benchmark-data.xlsx  benchmarkRestApi.py  cleancache.py  orthanc.json
OsimisWebApplication/: Gruntfile.js  README.md  bower.json  mkdocs.yml  package.json
Plugin/: BaseController.cpp  BaseController.h  DecodedImageAdapter.cpp  DecodedImageAdapter.h  Dockerfile  Injector.h  OrthancContextManager.cpp  OrthancContextManager.h  Plugin.cpp  SeriesInformationAdapter.cpp  SeriesInformationAdapter.h  ViewerPrefetchPolicy.cpp  ViewerPrefetchPolicy.h  ViewerToolbox.cpp  ViewerToolbox.h
Resources/: BuildInstructions.txt  OrthancExplorer.js
UnitTestsSources/: UnitTestsMain.cpp
WebApplication/: bower.json  (+6 more)
backend/: .dockerignore  CMakeLists.txt  Dockerfile  Dockerfile.classic.builder  Dockerfile.lsb.builder  README.txt  build.txt
backend/BenchmarksSources/: orthanc.json
backend/Dependencies/: WARNING.txt
backend/Dependencies/gil-2_1_1/boost/gil/: channel_algorithm.hpp
backend/Dependencies/gil-2_1_1/boost/gil/extension/: resample.hpp
backend/Dependencies/gil-2_1_1/boost/gil/extension/dynamic_image/: algorithm.hpp
backend/Orthanc/Core/: Enumerations.cpp  SystemToolbox.cpp  SystemToolbox.h  Uuid.cpp  Uuid.h
backend/Orthanc/Core/Images/: ImageProcessing.cpp  ImageProcessing.h
backend/Orthanc/Plugins/Samples/GdcmDecoder/: GdcmImageDecoder.cpp
backend/Orthanc/Resources/: EmbedResources.py
backend/Orthanc/Resources/CMake/: AutoGeneratedCode.cmake  BoostConfiguration.cmake  DownloadPackage.cmake  GoogleTestConfiguration.cmake  JsonCppConfiguration.cmake  SQLiteConfiguration.cmake
backend/Plugin/: BaseController.h  DecodedImageAdapter.h  Plugin.cpp
backend/Plugin/Image/: Image.h  ImageController.cpp  ImageController.h  ImageMetaData.cpp  ImageMetaData.h  ImageRepository.cpp  ImageRepository.h
backend/Plugin/Image/AvailableQuality/: IAvailableQualityPolicy.h  ImageQuality.h  OnTheFlyDownloadAvailableQualityPolicy.cpp  OnTheFlyDownloadAvailableQualityPolicy.h
backend/Plugin/Image/ImageContainer/: CompressedImageContainer.h  CornerstoneKLVContainer.cpp  CornerstoneKLVContainer.h  RawImageContainer.h
backend/Plugin/Image/ImageProcessingPolicy/: CompositePolicy.cpp  CompositePolicy.h  HighQualityPolicy.cpp  HighQualityPolicy.h  JpegConversionPolicy.cpp  KLVEmbeddingPolicy.cpp  KLVEmbeddingPolicy.h  LowQualityPolicy.cpp  MediumQualityPolicy.cpp  MediumQualityPolicy.h  PixelDataQualityPolicy.cpp  PixelDataQualityPolicy.h  PngConversionPolicy.cpp  ResizePolicy.cpp  ResizePolicy.h  Uint8ConversionPolicy.cpp
backend/Plugin/Image/Utilities/: KLVWriter.cpp  KLVWriter.h
backend/Plugin/Instance/: DicomRepository.cpp  DicomRepository.h
backend/Plugin/Series/: Series.cpp  Series.h  SeriesController.cpp  SeriesFactory.cpp  SeriesFactory.h  SeriesRepository.cpp
backend/Resources/: OrthancExplorer.js  SyncOrthancFolder.py
backend/Resources/CMake/: BuildDependencies.cmake  DownloadOrthancFramework.cmake  GdcmConfiguration.cmake  GeneralConfig.cmake  GetProductVersionFromGitTag.cmake  LinuxStandardBaseToolchain.cmake
backend/UnitTestsSources/: UnitTestsMain.cpp
backend/WebViewerLibrary/: AbstractWebViewer.cpp  AbstractWebViewer.h  BaseController.cpp  DecodedImageAdapter.cpp  DecodedImageAdapter.h  SeriesInformationAdapter.cpp  SeriesInformationAdapter.h  ViewerToolbox.cpp  ViewerToolbox.h  WebViewer.cpp  WebViewer.h  WebViewerConfiguration.cpp  WebViewerConfiguration.h  WebViewerLibrary.cmake
backend/WebViewerLibrary/Annotation/: AnnotationRepository.cpp  AnnotationRepository.h
backend/WebViewerLibrary/Config/: ConfigController.cpp  ConfigController.h  WebViewerConfiguration.cpp  WebViewerConfiguration.h
backend/WebViewerLibrary/CustomCommand/: CustomCommandController.cpp  CustomCommandController.h
backend/WebViewerLibrary/Image/: Image.h  ImageController.cpp  ImageController.h  ImageMetaData.cpp  ImageMetaData.h  ImageRepository.cpp  ImageRepository.h
backend/WebViewerLibrary/Image/AvailableQuality/: IAvailableQualityPolicy.h  ImageQuality.h  OnTheFlyDownloadAvailableQualityPolicy.cpp  OnTheFlyDownloadAvailableQualityPolicy.h
backend/WebViewerLibrary/Image/ImageContainer/: CornerstoneKLVContainer.cpp  CornerstoneKLVContainer.h  IImageContainer.h  RawImageContainer.cpp  RawImageContainer.h
backend/WebViewerLibrary/Image/ImageProcessingPolicy/: JpegConversionPolicy.cpp  JpegConversionPolicy.h  PngConversionPolicy.cpp  ResizePolicy.cpp  Uint8ConversionPolicy.cpp
backend/WebViewerLibrary/Image/Utilities/: KLVWriter.h
backend/WebViewerLibrary/Instance/: DicomRepository.cpp  DicomRepository.h  InstanceRepository.cpp  InstanceRepository.h
backend/WebViewerLibrary/Series/: Series.cpp  Series.h  SeriesController.cpp  SeriesController.h  SeriesFactory.cpp  SeriesFactory.h  SeriesHelpers.cpp  SeriesRepository.cpp  SeriesRepository.h
backend/WebViewerLibrary/ShortTermCache/: CacheContext.cpp  CacheContext.h  CacheManager.cpp  CacheManager.h  CacheScheduler.cpp  CacheScheduler.h  ViewerPrefetchPolicy.cpp  ViewerPrefetchPolicy.h
backend/WebViewerLibrary/Study/: StudyController.cpp  StudyController.h
backend/WebViewerPlugin/: Plugin.cpp  WebViewer.cpp  WebViewerPlugin.cmake
backend/WebViewerTests/: UnitTestsMain.cpp  WebViewerTests.cmake
backend/scripts/: buildDocker.sh  buildLocal.sh  buildLocally.sh
(+863 files in other folders)
